exlcude docker file from sonarcloud analysis

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,3 +1,4 @@
 sonar.exclusions=**/.github/workflows/CI-CD-SonarQube-OWasp-DC-ZAP.yml
 sonar.coverage.exclusions=**/Models/Entities/**,**/Models/DTOs/**
 sonar.coverage.exclusions=**/Models/**,**/ViewModels/**,**/*VM.cs
+sonar.coverage.exclusions=/Dockerfile
