--- a/.github/workflows/CI-v2.yml
+++ b/.github/workflows/CI-v2.yml
@@ -77,7 +77,8 @@ jobs:
 
       - name: Run Snyk Test
         run: |
-          snyk test ${{ env.PROJECT_PATH }} \
+          snyk test \
+            --file=${{ env.PROJECT_PATH }} \
             --severity-threshold=high \
             --sarif-file-output=snyk-dotnet.sarif
       
