--- a/.github/workflows/CI-dotNet.yml
+++ b/.github/workflows/CI-dotNet.yml
@@ -70,10 +70,12 @@ jobs:
 
       # ---------------- Snyk .NET Dependency Scan ----------------
       - name: Install Snyk CLI
-        run: npm install -g snyk
+        run: npm install -g snyk --ignore-scripts
 
       - name: Authenticate Snyk
-        run: snyk auth ${{ secrets.SNYK_TOKEN }}
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        run: snyk auth "$SNYK_TOKEN"
 
       - name: Run Snyk Test
         working-directory: ADWebApplication
