--- a/.github/workflows/CI-dotNet.yml
+++ b/.github/workflows/CI-dotNet.yml
@@ -70,29 +70,29 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: dotnet sonarscanner end
 
-      - name: Fetch SonarCloud Metrics
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          curl -u "${SONAR_TOKEN}:" \
-            "https://sonarcloud.io/api/measures/component?component=GDipSA-Team-5_AD-Project&metricKeys=bugs,vulnerabilities,code_smells,coverage,duplicated_lines_density,security_hotspots" \
-            -o sonar.json
+      # - name: Fetch SonarCloud Metrics
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #   run: |
+      #     curl -u "${SONAR_TOKEN}:" \
+      #       "https://sonarcloud.io/api/measures/component?component=GDipSA-Team-5_AD-Project&metricKeys=bugs,vulnerabilities,code_smells,coverage,duplicated_lines_density,security_hotspots" \
+      #       -o sonar.json
 
-      - name: Parse Sonar Results
-        id: sonar_results
-        run: |
-          BUGS=$(jq -r '.component.measures[]? | select(.metric=="bugs") | .value // "0"' sonar.json)
-          VULN=$(jq -r '.component.measures[]? | select(.metric=="vulnerabilities") | .value // "0"' sonar.json)
-          SMELLS=$(jq -r '.component.measures[]? | select(.metric=="code_smells") | .value // "0"' sonar.json)
-          COVERAGE=$(jq -r '.component.measures[]? | select(.metric=="coverage") | .value // "0"' sonar.json)
-          DUP=$(jq -r '.component.measures[]? | select(.metric=="duplicated_lines_density") | .value // "0"' sonar.json)
-          HOTSPOTS=$(jq -r '.component.measures[]? | select(.metric=="security_hotspots") | .value // "0"' sonar.json)
-          echo "bugs=$BUGS" >> $GITHUB_OUTPUT
-          echo "vulnerabilities=$VULN" >> $GITHUB_OUTPUT
-          echo "code_smells=$SMELLS" >> $GITHUB_OUTPUT
-          echo "coverage=$COVERAGE" >> $GITHUB_OUTPUT
-          echo "duplications=$DUP" >> $GITHUB_OUTPUT
-          echo "hotspots=$HOTSPOTS" >> $GITHUB_OUTPUT
+      # - name: Parse Sonar Results
+      #   id: sonar_results
+      #   run: |
+      #     BUGS=$(jq -r '.component.measures[]? | select(.metric=="bugs") | .value // "0"' sonar.json)
+      #     VULN=$(jq -r '.component.measures[]? | select(.metric=="vulnerabilities") | .value // "0"' sonar.json)
+      #     SMELLS=$(jq -r '.component.measures[]? | select(.metric=="code_smells") | .value // "0"' sonar.json)
+      #     COVERAGE=$(jq -r '.component.measures[]? | select(.metric=="coverage") | .value // "0"' sonar.json)
+      #     DUP=$(jq -r '.component.measures[]? | select(.metric=="duplicated_lines_density") | .value // "0"' sonar.json)
+      #     HOTSPOTS=$(jq -r '.component.measures[]? | select(.metric=="security_hotspots") | .value // "0"' sonar.json)
+      #     echo "bugs=$BUGS" >> $GITHUB_OUTPUT
+      #     echo "vulnerabilities=$VULN" >> $GITHUB_OUTPUT
+      #     echo "code_smells=$SMELLS" >> $GITHUB_OUTPUT
+      #     echo "coverage=$COVERAGE" >> $GITHUB_OUTPUT
+      #     echo "duplications=$DUP" >> $GITHUB_OUTPUT
+      #     echo "hotspots=$HOTSPOTS" >> $GITHUB_OUTPUT
 
       # ---------------- Snyk .NET Dependency Scan ----------------
       - name: Install Snyk CLI
@@ -144,39 +144,39 @@ jobs:
         with:
           sarif_file: snyk-container.sarif
 
-      # Save metadata for dashboard
-      - name: Save SAST/SCA Metadata
-        run: |
-          mkdir -p scan-data
-          cat > scan-data/sast-sca-metadata.json << EOF
-          {
-            "timestamp": "$(date -u +"%Y-%m-%dT%H:%M:%SZ")",
-            "run_id": "${{ github.run_id }}",
-            "run_number": "${{ github.run_number }}",
-            "branch": "${{ github.ref_name }}",
-            "commit": "${{ github.sha }}",
-            "sonarcloud": {
-              "bugs": "${{ steps.sonar_results.outputs.bugs }}",
-              "vulnerabilities": "${{ steps.sonar_results.outputs.vulnerabilities }}",
-              "code_smells": "${{ steps.sonar_results.outputs.code_smells }}",
-              "security_hotspots": "${{ steps.sonar_results.outputs.hotspots }}",
-              "coverage": "${{ steps.sonar_results.outputs.coverage }}",
-              "duplications": "${{ steps.sonar_results.outputs.duplications }}"
-            },
-            "dependency_check": {
-              "critical": "0",
-              "high": "${{ steps.snyk_results.outputs.high }}",
-              "medium": "${{ steps.snyk_results.outputs.medium }}",
-              "low": "${{ steps.snyk_results.outputs.low }}",
-              "total": "${{ steps.snyk_results.outputs.total }}"
-            }
-          }
-          EOF
+      # # Save metadata for dashboard
+      # - name: Save SAST/SCA Metadata
+      #   run: |
+      #     mkdir -p scan-data
+      #     cat > scan-data/sast-sca-metadata.json << EOF
+      #     {
+      #       "timestamp": "$(date -u +"%Y-%m-%dT%H:%M:%SZ")",
+      #       "run_id": "${{ github.run_id }}",
+      #       "run_number": "${{ github.run_number }}",
+      #       "branch": "${{ github.ref_name }}",
+      #       "commit": "${{ github.sha }}",
+      #       "sonarcloud": {
+      #         "bugs": "${{ steps.sonar_results.outputs.bugs }}",
+      #         "vulnerabilities": "${{ steps.sonar_results.outputs.vulnerabilities }}",
+      #         "code_smells": "${{ steps.sonar_results.outputs.code_smells }}",
+      #         "security_hotspots": "${{ steps.sonar_results.outputs.hotspots }}",
+      #         "coverage": "${{ steps.sonar_results.outputs.coverage }}",
+      #         "duplications": "${{ steps.sonar_results.outputs.duplications }}"
+      #       },
+      #       "dependency_check": {
+      #         "critical": "0",
+      #         "high": "${{ steps.snyk_results.outputs.high }}",
+      #         "medium": "${{ steps.snyk_results.outputs.medium }}",
+      #         "low": "${{ steps.snyk_results.outputs.low }}",
+      #         "total": "${{ steps.snyk_results.outputs.total }}"
+      #       }
+      #     }
+      #     EOF
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: sast-sca-metadata
-          path: scan-data/
+      # - uses: actions/upload-artifact@v4
+      #   with:
+      #     name: sast-sca-metadata
+      #     path: scan-data/
 
 # =========================================================
 # JOB 2: DAST
@@ -276,7 +276,7 @@ jobs:
 # JOB 3: Dashboard
 # =========================================================
   generate-dashboard:
-    needs: [build-and-sast-sca-scan, dast-scan]
+    needs: [dast-scan]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
 
@@ -288,10 +288,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/download-artifact@v4
-        with:
-          name: sast-sca-metadata
-          path: scan-data/
+      # - uses: actions/download-artifact@v4
+      #   with:
+      #     name: sast-sca-metadata
+      #     path: scan-data/
 
       - uses: actions/download-artifact@v4
         with:
